--- a/src/styles/scss/_photo.scss
+++ b/src/styles/scss/_photo.scss
@@ -6,6 +6,5 @@
 }
 
 .photoContainer {
-    width: 25vw;
-    height: 30vh;
+    text-align: center;
 }
